# zhukebot

./: .env  .env.prod  .flake8  .gitignore  .gitmodules  .pdm.toml  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: codacy.yml  codeql.yml  pylint.yml  pyright.yml  ruff.yml
assets/badge/: pdm.json  python.json  ruff_v2.json  scheme.json
zhukebot/plugins/arkrecord/: __init__.py
zhukebot/plugins/arkrecord/ark/: __init__.py  ark_db.py  ark_drawer.py  ark_import.py  ark_operator.py  ark_record.py  ark_scrawl.py  ark_setting.py  ark_style.py  ark_update.py  ark_utils.py
zhukebot/plugins/chatglm/: .gitignore  LICENSE  README.md  __init__.py  _train.py  changelog.md  chat.py  help.py  pyproject.toml  test.py  updatelog.md
zhukebot/plugins/chatglm/nonebot_plugin_chatglm/: __init__.py  chat.py  config.py  help.py  mini_rwkv.py  prompt.py  utils.py
zhukebot/plugins/sdwebui/: __init__.py  aidraw.py  config.py  fifo.py  help.py  manage.py
zhukebot/plugins/sdwebui/backend/: __init__.py  base.py
zhukebot/plugins/sdwebui/nonebot_plugin_sdwebui/: __init__.py  aidraw.py  base.py  config.py  fifo.py  manage.py
zhukebot/plugins/sdwebui/nonebot_plugin_sdwebui/backend/: __init__.py
zhukebot/plugins/sdwebui/nonebot_plugin_sdwebui/plugins/: anlas.py  daylimit.py
zhukebot/plugins/sdwebui/nonebot_plugin_sdwebui/utils/: translation.py
zhukebot/plugins/sdwebui/plugins/: anlas.py
zhukebot/plugins/sdwebui/utils/: __init__.py  translation.py
zhukebot/plugins/sdwebui/version/: __init__.py  version.py
zhukebot/plugins/tool/: __init__.py
