[project]
name = "zhukebot"
version = "0.1.0"
description = "烛客机器人"
distribution =FALSE
authors = [{ name = "dao_mingze", email = "dao_mingze@163.com" }]
dependencies = [
    "nb-cli>=1.0.5",
    "nonebot2>=2.0.0rc3",
    "nonebot-plugin-apscheduler>=0.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "Console", module_name = "nonebot.adapters.console"},
]
plugins = [
    "nonebot_plugin_revoke",
    "nonebot_plugin_help",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_moyu",
    "nonebot_plugin_pluginupdatecheck",
    "nonebot_plugin_saa",
    "nonebot_plugin_htmlrender",
]
plugin_dirs = ["zhukebot/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
	| \.venv
	| build
	| dist
)/
'''

[tool.ruff]
line-length = 120  # 代码最大行宽
lint.select = [         # 选择的规则
    "F",    #pyflakes
    "E",    #pep8
    "W",    #pep8
    "C90",  #McCobe
    "I",    #isort
    "UP",   #新版本语法
    "N",    #命名规范检查
    "PL",   #pylint静态代码检查
    "PERF", #检测性能问题
    #"RUF",  #社区规则
]
lint.ignore = ["F401","UP009","RUF001","RUF003"]  # 忽略的规则