[project]
name = "zhukebot"
version = "0.2.0"
description = "烛客机器人"
authors = [{ name = "dao_mingze", email = "dao_mingze@163.com" }]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "nonebot-plugin-alconna>=0.52.3",
]

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    {name = "Console", module_name = "nonebot.adapters.console"},
]
plugins = [
    "nonebot_bison",
    "nonebot_plugin_revoke",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_moyu",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_status",
    "nonebot_plugin_analysis_bilibili",
    "nonebot_plugin_wordcloud",
    "nonebot_plugin_skland_arksign",
    "nonebot_plugin_avalon",
    "nonebot_plugin_alconna",
    "nonebot_plugin_treehelp",
    "nonebot_plugin_saa"]


[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "private"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
	| \.venv
	| build
	| dist
)/
'''

[tool.ruff]
line-length = 120  # 代码最大行宽
lint.select = [         # 选择的规则
    "F",    #pyflakes
    "E",    #pep8
    "W",    #pep8
    "C90",  #McCobe
    "I",    #isort
    "UP",   #新版本语法
    "N",    #命名规范检查
    "PL",   #pylint静态代码检查
    "PERF", #检测性能问题
    #"RUF",  #社区规则
]
lint.ignore = ["F401","UP009","RUF001","RUF003"]  # 忽略的规则