[tool.pdm]
version = { source = "scm" }
build = { includes = ["nonebot_plugin_chatglm"] }

[project]
name = "nonebot-plugin-chatglm"
version = "0.1.5"
description = "基于ChatGLM-6B的NoneBot2插件"
authors = [{ name = "dao_mingze", email = "dao_mingze@163.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "protobuf==3.20.0",
    "transformers>=4.26.1",
    "icetk>=0.0.4",
    "cpm-kernels>=1.0.11",
    "nonebot-adapter-onebot>=2.1.0",
    "nonebot2>=2.0.0rc3",
    "nonebot-plugin-htmlrender>=0.2.0.3",
]

[project.urls]
repository = "https://github.com/DaoMingze/zhukebot/tree/main/zhukebot/plugins/chatglm"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
